src/css-backend/table.styl
$header-height = 64px;

////////
// TABLE CARDS + PAGINATION + FILTER
////////

.bs-table {
  background: white;
  margin-bottom: 56px;
  position: relative;

  .mdl-data-table {
    border-left: 0;
    border-right: 0;
    border-top: 0;
  }

  th a {
    color: currentColor;
    font-weight: inherit;
    text-decoration: none;

    .material-icons {
      vertical-align: middle;
    }
  }

  &__header,
  &__header *,
  &__footer,
  &__footer *,
  &__filter,
  &__filter * {
    box-sizing: border-box;
  }
  &__header,
  &__footer {
    padding: 0 14px 0 24px;
    display: flex;
    align-items: center;
  }

  &__filter {
    background: #FBFBFB;
    togglable();
  }

}

.bs-table-filter__row {
  display: flex;
  align-items: center;

  > div {
    width: 'calc(%s - 48px)' % ( unit(100/3, '%') )
    margin: 0 24px;
  }
}

// contain date pickers
.bs-table-filter-row__dual-field {
  display: flex;
  align-items: center;

  > div {
    width: calc(50% - 12px);
    &:first-child { margin-right: 12px; }
    &:last-child {  margin-left:  12px; }
  }
  // only date pickers have icons
  i.material-icons {
    position: absolute;
    right: 0;
    bottom: 24px;
    pointer-events: none;
    opacity: .5;
  }
}

.bs-line-selection {
  table-meta-block();
  table-meta-block-header();
}

.bs-table-filter-row__action {
  text-align: right;
}

////////
// HEADER
////////

.bs-table__header {
  height: $header-height;
  justify-content: space-between;
  align-items: baseline;
  padding-top: 1.2em;
  position: relative;

  > div button ~ button {
    margin-left: .5em;
  }
}

.bs-table-header {
  &__title {
    font-size: 20px;
    color: rgba(black, .87);
    margin: 0;
    font-weight: bold;
    flex: 0 0 auto;
  }
  &__summary {
    margin: 0;
    padding: 0 24px;
    flex: 1 1 auto;
    white-space: nowrap;
    font-size: 13px;
    overflow: hidden;
    text-overflow: ellipsis;

    dt,
    dd {
      display: inline;
      padding: 0;
      margin: 0;
    }
    dt {
      padding-left: 12px;
      font-weight: normal;
      color: #999999;

      + dt {
        padding-left: 0;
        &::before { content: ' '}
      }
    }
    dd {
      padding-left: 6px;
    }
  }
  &__filter {
    color: currentColor;
    cursor: pointer;
    flex: 0 0 auto;
    &:hover {
      color: $accent;
    }

    ~ .bs-table-header__filter {
      margin-left: 1em;
    }
  }

}

.bs-table__header--selection {
  background: lighten($accent, 25);
  padding-top: 0;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  togglable($header-height);

  // &.is-visible {
  //   height: $header-height;
  // }

  .bs-table-header {

    &__title {
      color: $accent;
      font-size: 13px;
      font-weight: 400;
    }
  }
}

////////
// TAG PANEL
////////

// struggle with BEM
// pick pieces here…
// http://simurai.com/blog/2013/10/24/BEM-syntax-with-ux-in-mind
// …and here
// https://www.smashingmagazine.com/2016/06/battling-bem-extended-edition-common-problems-and-how-to-avoid-them/

$panel-gutter = 20px

.bsTagsPanel {
  position: absolute;
  right: 0;
  top: 0;
  margin: 0;
  z-index: 2;
  background: white;
  panel-shadow();
  width: 330px;
  togglable();

  &__title {
    height: $header-height;
    border-bottom: 1px solid $c-grey-100;
    padding: 0 $panel-gutter;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  &__listWrapper {
    height: 310px;
    margin: 0;
  }

  &__list {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  &__item {
    height: 47px;
    display: flex;
    align-items: center;
    padding: 0 $panel-gutter;
  }

  &__actions {
    height: $header-height;
    margin: 0;
    padding: 0 $panel-gutter;
    border-top: 1px solid $c-grey-100;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }
}

.bs-tags-input {

  input {
    hidden();
  }

  &__title {

    &::before {
      material-icon();
      cursor: pointer;
      color: $c-grey-700;
      vertical-align: middle;
      padding-right: $panel-gutter;

      input:checked:nth-child(1) ~ & {
        content: 'check_box_outline_blank';
      }
      input:checked:nth-child(2) ~ & {
        content: 'indeterminate_check_box';
      }
      input:checked:nth-child(3) ~ & {
        content: 'check_box';
      }
    }
  }
}

////////
// FOOTER
////////

.bs-table__footer {
  height: 56px;
  justify-content: flex-end;
  font-size: 14px;
  color: rgba(black, .54)
}

.bs-table-footer {

  &__limit {
    width: 40px;
    text-align: right;
    margin-right: 24px;
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    border: 0;
    background: none;
    border-radius: 0;
    margin-left: 24px;
  }

  &__position {
    margin: 0 8px;
  }

  &__nav {
    width: 24px;
    margin-left: @width;
    color: currentColor;
    // align icon
    line-height: 0;
    span& {
      opacity: .5;
    }
  }
}

